[package]
name = "episode-checker"
version = "1.2.0"
edition = "2021"

[profile.release]
strip = true
lto = true

[dependencies]
clap = { version = "4.2.1", features = ["derive"] }
nom = "7.1.3"
serde = { version = "1.0.159", features = ["derive"] }
thiserror = "1.0.40"
time = { version = "0.3.20", features = ["parsing", "formatting", "macros"] }
ureq = { version = "2.6.2", features = ["json"] }
urlencoding = "2.1.2"
