[package]
name = "episode-checker"
version = "1.2.0"
edition = "2021"

[profile.release]
strip = true
lto = true

[dependencies]
clap = { version = "4.2.1", features = ["derive"] }
nom = "8.0.0"
serde = { version = "1.0.159", features = ["derive"] }
thiserror = "2.0.12"
time = { version = "0.3.20", features = ["parsing", "formatting", "macros"] }
ureq = { version = "3.0.9", features = ["json"] }
urlencoding = "2.1.2"
